@@ -1,3 +1,9 @@
+Fri Apr  3 18:37:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* gc.c (Init_stack): use ruby_init_stack.  [ruby-dev:34350]
+
+	* intern.h (Init_stack): make to call ruby_init_stack.
+
 Fri Apr  3 18:35:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in (fake.rb): creates with config.status.
